--- a/style.css
+++ b/style.css
@@ -1,1 +1,76 @@
+body {
+    font-family: sans-serif;
+    background-image: linear-gradient(to bottom, black,lightblue);
+}
+h1 {
+  font-size: 70px;
+  font-weight: 600;
+  color: #fdfdfe;
+  text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
+    0px 0px 20px #b393d3;
+    text-align: center;
+}
+h1:hover {
+    color:lightskyblue;
+}
+h2:hover {
+    color:lightskyblue;
+}
+p:hover {
+    color:lightskyblue;
+}
+nav {
+    text-align: center;
+    color: white;
+}
+
+.link-nav {
+    color: white;
+}
+.pon {
+    display: flex;
+    justify-content: center;
+}
+p{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 300;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+
+}
+
+footer {
+    background-color: black;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social {
+       margin-top: 30px;
+}
+
+ul {
+    color: white;
+    text-align: center;
+    list-style-position: inside;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+ol {
+    color: white;
+    text-align: center;
+    list-style-position: inside;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
 
